syntax = "proto2";

option java_multiple_files = true;
option java_package = "com.videonetics.data_models.status.protos";
option java_outer_classname = "StatusProtos";

package resource;


message ThreadStatus {
  required int64 id = 1;
  required int64 channel_id = 2;
  required int64 value = 3;
  required int64 last_value = 4;
  required int64 last_updated_in_ms = 5;
}

message ProcessStatus {
  required int64 id = 1;
  required int64 channel_id = 2;
  repeated ThreadStatus thread_status = 3;
}

message MachineStatus {
  required int64 id = 1;
  required int64 channel_id = 2;
  repeated ProcessStatus process_status = 3;
}

message ClusterStatus {
  required int64 id = 1;
  required int64 channel_id = 2;
  repeated MachineStatus machine_status = 3;
}